--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 <html>
 <head>
   <title>Pătruț Simulator</title>
+  <style>
+    #patrut {
+  display: flex;
+  flex-flow: column nowrap;
+  }
+
+  article.qa {
+  margin: 1.25rem 0;
+  }
+
+  article.qa section {
+  font-weight: bold;
+  }
+
+  article.qa section span {
+  font-weight: normal;
+  }
+  </style>
 </head>
 <body>
   <div id="patrut">
